--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kingtech.flutter_firebase_phoneauth">
    <application
-        android:label="2 Factor Authentication"
+android:label="Firebase Authentication"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
